tests/ui/derive_default/duplicate_derive_default.rs
use modular_bitfield::prelude::*;

#[bitfield]
#[derive(Default)]
#[derive(Default)]
pub struct DuplicateDefault {
    flag: bool,
    value: B7,
}

fn main() {}